Aiming linetrace based on crosshair working

--- a/BattleTanks/Config/DefaultEngine.ini
+++ b/BattleTanks/Config/DefaultEngine.ini
@@ -7,9 +7,9 @@ DefaultGraphicsPerformance=Maximum
 AppliedDefaultGraphicsPerformance=Maximum
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/BattleGround.BattleGround
-GameDefaultMap=/Game/BattleGround.BattleGround
-GlobalDefaultGameMode=/Game/BattleTanksGameModeBase_BP.BattleTanksGameModeBase_BP_C
+EditorStartupMap=/Game/Levels/BattleGround.BattleGround
+GameDefaultMap=/Game/Levels/MainMenu.MainMenu
+GlobalDefaultGameMode=/Game/Blueprints/BattleTanksGameModeBase_BP.BattleTanksGameModeBase_BP_C
 
 [/Script/Engine.PhysicsSettings]
 DefaultGravityZ=-980.000000
@@ -51,5 +51,3 @@ SyncSceneSmoothingFactor=0.000000
 AsyncSceneSmoothingFactor=0.990000
 InitialAverageFrameRate=0.016667
 PhysXTreeRebuildRate=10
-
-
